backup/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: production-app-service
  namespace: production

spec:
  selector:
    app: production-app

  ports:
  - port: 80
    targetPort: 80

  type: NodePort
